--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "sharp": "^0.33.5"
   },
+  
+    "engines": {
+      "node": ">=16.0.0"
+    },
+  
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts-start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,4 +43,5 @@
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6"
   }
+  
 }
